# robot_venvs

./: CMakeLists.txt  README.md  package.xml
models/: cone.STL  cylinder_hole.STL
src/: spawn_bottle.cpp  spawn_bottle_camPose.cpp  spawn_cylinder.cpp  spawn_meshobject.cpp  spawn_object.cpp  spawn_pick_place_object.cpp  spawn_table.cpp
